Configured Slider Button

--- a/ColorPicker/ColorPicker/Base.lproj/Main.storyboard
+++ b/ColorPicker/ColorPicker/Base.lproj/Main.storyboard
@@ -18,11 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lPc-gS-y8s" customClass="ColorWheel" customModule="ColorPicker" customModuleProvider="target">
-                                <rect key="frame" x="87" y="328" width="240" height="240"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lPc-gS-y8s" customClass="ColorPicker" customModule="ColorPicker" customModuleProvider="target">
+                                <rect key="frame" x="87" y="316" width="240" height="264"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="lPc-gS-y8s" secondAttribute="height" multiplier="1:1" id="jLb-ds-R3D"/>
+                                    <constraint firstAttribute="width" secondItem="lPc-gS-y8s" secondAttribute="height" multiplier="1:1.1" id="jLb-ds-R3D"/>
                                 </constraints>
                             </view>
                         </subviews>
